# PracticesAndSpikes

./: .gitignore  .gitmodules  ANTIGRAVITY.MD  GEMINI.md  README.md  docker-compose.yml  docker-compose3.yml
BaGetVolume/: baget.env
Calculusius/: Calculusius.sln
DockerAndMore/: Dockerfile  docker-compose.yml
HotelListing/: HotelListing.sln
LiveChartsPrototype/: App.xaml.cs  Icons.xaml  MainUI.xaml  MainUI.xaml.cs  Program.cs  Protoype.csproj
NewTesty/: NewTesty.sln
PulsarWorker/: Dockerfile  PulsarWorker.sln
QtAndCLion/: CMakeLists.txt
ResourceCompare/: Program.cs  ResourceCompare.csproj  UI.Designer.cs
RustToNpmTrial/: Cargo.toml  package.json  pre-install.js  start.js  uninstall.js
TestWebApp/: TestWebApp.sln
ThreadedLogger/: ThreadedLogger.sln
cpp/: .gitignore  README.md
cpp/codewars-training/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
cpp/codewars-training-tests/: CMakeLists.txt  digital_root_tests.cpp
cpp/codewars-training-tests/tests/: counting_duplicates_tests.cpp  create_phone_number_tests.cpp  descending_order_tests.cpp  high_and_low_tests.cpp  roman_numerals_encoder.cpp  rot13_tests.cpp  same_tests.cpp  string_ends_with_tests.cpp  trailing_zeros_of_factorial_tests.cpp
cpp/codewars-training/counting_duplicates/: kata.cpp
cpp/codewars-training/create_phone_number/: kata.cpp
cpp/codewars-training/descending_order/: kata.cpp
cpp/codewars-training/digital_root/: kata.cpp
cpp/codewars-training/high_and_low/: kata.cpp
cpp/codewars-training/include/counting_duplicates/: kata.hpp
cpp/codewars-training/include/create_phone_number/: kata.hpp
cpp/codewars-training/include/descending_order/: kata.hpp
cpp/codewars-training/include/digital_root/: kata.hpp
cpp/codewars-training/include/high_and_low/: kata.hpp
cpp/codewars-training/include/roman_numerals_encoder/: kata.hpp
cpp/codewars-training/include/rot13/: kata.hpp
cpp/codewars-training/include/same/: kata.hpp
cpp/codewars-training/include/string_ends_with/: kata.hpp
cpp/codewars-training/include/trailing_zeros_of_factorial/: kata.hpp
cpp/codewars-training/roman_numerals_encoder/: kata.cpp
cpp/codewars-training/rot13/: kata.cpp
cpp/codewars-training/same/: kata.cpp
cpp/codewars-training/src/digital_root/: kata.cpp
cpp/codewars-training/src/high_and_low/: kata.cpp
cpp/codewars-training/string_ends_with/: kata.cpp
cpp/codewars-training/tests/: digital_root_tests.cpp  test_dummy.cpp
cpp/codewars-training/trailing_zeros_of_factorial/: kata.cpp
docker/: README.md
dotnet/: README.md
rust/: .gitignore.txt
sql/: docker-compose.yml  sql_bug_fixingt_the_join.sql
(+1049 files in other folders)
